test/errors/type/float/toint.yasl
echo mt.lookup(0.0, .toint)(1)
